...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Later" />

        <!-- 가운데를 채워주는 공간 -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnEvaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Evaluate" />
    </LinearLayout>
</LinearLayout>

